// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackButton > should not redirect to given url when disabled 1`] = `
<div>
  <button
    class="flex items-center w-9 border-b transition-colors duration-200 cursor-not-allowed border-b-theme-secondary-300 bg-theme-secondary-100 text-theme-secondary-500 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dark:text-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should not redirect to previous page when disabled 1`] = `
<div>
  <button
    class="flex items-center w-9 border-b transition-colors duration-200 cursor-not-allowed border-b-theme-secondary-300 bg-theme-secondary-100 text-theme-secondary-500 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dark:text-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should redirect to given url 1`] = `
<div>
  <button
    class="flex items-center w-9 border-b transition-colors duration-200 focus:rounded focus:ring-2 focus:ring-inset border-b-theme-secondary-300 bg-theme-secondary-100 text-theme-secondary-500 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dark:text-theme-dark-50 dark:hover:bg-theme-dark-700 hover:bg-theme-primary-200 hover:text-theme-primary-700 focus:ring-theme-primary-400 focus:outline-hidden"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should redirect to previous page 1`] = `
<div>
  <button
    class="flex items-center w-9 border-b transition-colors duration-200 focus:rounded focus:ring-2 focus:ring-inset border-b-theme-secondary-300 bg-theme-secondary-100 text-theme-secondary-500 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dark:text-theme-dark-50 dark:hover:bg-theme-dark-700 hover:bg-theme-primary-200 hover:text-theme-primary-700 focus:ring-theme-primary-400 focus:outline-hidden"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should render 1`] = `
<div>
  <button
    class="flex items-center w-9 border-b transition-colors duration-200 focus:rounded focus:ring-2 focus:ring-inset border-b-theme-secondary-300 bg-theme-secondary-100 text-theme-secondary-500 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dark:text-theme-dark-50 dark:hover:bg-theme-dark-700 hover:bg-theme-primary-200 hover:text-theme-primary-700 focus:ring-theme-primary-400 focus:outline-hidden"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`BackButton > should render when disabled 1`] = `
<div>
  <button
    class="flex items-center w-9 border-b transition-colors duration-200 cursor-not-allowed border-b-theme-secondary-300 bg-theme-secondary-100 text-theme-secondary-500 dark:border-b-theme-dark-700 dark:bg-theme-dark-950 dark:text-theme-secondary-800"
  >
    <div
      class="mx-auto"
    >
      <div
        style="height: 10px; width: 10px;"
      >
        <svg
          id="chevron-left-small"
          style="height: 100%; width: 100%;"
          viewBox="0 0 10 10"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;
